Merged revisions 12004-12008,12010,12017-12018,12032,12067,12069-12070,12072-12073,12075-12082,12085-12090,12092-12095,12098-12103,12105,12107,12109,12112-12113,12115-12118,12120-12121,12123-12126,12128-12130,12132-12140,12144-12159,12161-12162,12164,12166-12169,12171,12173-12183,12186-12189,12191-12218,12221-12228,12230,12232-12241,12244,12246-12250,12252,12254-12255,12257-12268,12270-12271,12273-12274,12276,12278-12282,12285-12286,12289-12300,12302,12304-12338,12340-12366,12368-12373,12377,12379,12382,12384-12389,12392-12394,12396-12404,12408,12410 via svnmerge from https://opennms.svn.sourceforge.net/svnroot/opennms/opennms/trunk
................
  r12004 | rangerrick | 2009-01-22 22:09:18 -0500 (Thu, 22 Jan 2009) | 3 lines
  
  Initialized merge tracking via "svnmerge" with revisions "1-12002" from 
  https://opennms.svn.sourceforge.net/svnroot/opennms/opennms/branches/feature-inventory
................
  r12005 | dhustace | 2009-01-22 23:55:08 -0500 (Thu, 22 Jan 2009) | 1 line
  
  Ackd now handles acknowledgment events
................
  r12006 | dhustace | 2009-01-23 07:47:55 -0500 (Fri, 23 Jan 2009) | 1 line
  
  wasn't ready to commit scriptd testing, yet.
................
  r12007 | dhustace | 2009-01-23 08:08:21 -0500 (Fri, 23 Jan 2009) | 1 line
  
  correcting copyright info
................
  r12008 | dhustace | 2009-01-23 08:40:33 -0500 (Fri, 23 Jan 2009) | 1 line
  
  fix copyright
................
  r12010 | rangerrick | 2009-01-23 09:49:05 -0500 (Fri, 23 Jan 2009) | 1 line
  
  allow overriding update policy
................
  r12017 | rangerrick | 2009-01-24 14:51:36 -0500 (Sat, 24 Jan 2009) | 13 lines
  
  Merged revisions 11895,12015 via svnmerge from 
  https://opennms.svn.sourceforge.net/svnroot/opennms/opennms/branches/1.6-testing
  
  ........
    r11895 | rangerrick | 2009-01-14 23:42:30 -0500 (Wed, 14 Jan 2009) | 1 line
    
    fix character encoding here too
  ........
    r12015 | tarus | 2009-01-23 19:00:40 -0500 (Fri, 23 Jan 2009) | 2 