@@ -35,6 +35,7 @@
  */
 package org.opennms.netmgt.ackd.readers;
 
+import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -54,15 +55,19 @@ import javax.mail.MessagingException;
 import javax.mail.Store;
 import javax.mail.internet.InternetAddress;
 
-import org.opennms.core.utils.JavaMailer;
-import org.opennms.core.utils.JavaMailerException;
 import org.opennms.core.utils.TimeoutTracker;
 import org.opennms.netmgt.ackd.AckReader;
 import org.opennms.netmgt.ackd.AckService;
-import org.opennms.netmgt.config.ackd.AckdConfiguration;
 import org.opennms.netmgt.config.common.JavamailProperty;
 import org.opennms.netmgt.config.common.ReadmailConfig;
-import org.opennms.netmgt.model.Acknowledgment;
+import org.opennms.netmgt.dao.AckdConfigurationDao;
+import org.opennms.netmgt.dao.JavaMailConfigurationDao;
+import org.opennms.netmgt.model.AckAction;
+import org.opennms.netmgt.model.AckType;
+import org.opennms.netmgt.model.OnmsAcknowledgment;
+
+import org.opennms.javamail.JavaMailerException;
+import org.opennms.javamail.JavaMailer;
 
 
 /**
@@ -70,15 +75,17 @@ import org.opennms.netmgt.model.Acknowledgment;
  * 
  * DONE: Identify acknowledgments for sent notifications
  * DONE: Identify acknowledgments for alarm IDs (how the send knows the ID, good question)
- * TODO: Persist acknowledgments
- * TODO: Identify escalation reply
- * TODO: Identify clear reply
- * TODO: Identify unacknowledged reply
- * TODO: Formalize Acknowledgment parameters (ack-type, id)
- * TODO: JavaMail configuration factory
+ * DONE: Persist acknowledgments
+ * DONE: Identify escalation reply
+ * DONE: Identify clear reply
+ * DOND: Identify unacknowledged reply
+ * DONE: Formalize Acknowledgment parameters (ack-type, id)
+ * DONE: JavaMail configuration factory
+ * DONE: Ackd configuration factory
+ * TODO: Associate email replies with openNMS user
  * TODO: Finish scheduling component of JavaAckReader
  * TODO: Configurable Schedule
- * TODO: Identify Java Mail configuration element to use for reading replies
+ * DONE: Identify Java Mail configuration element to use for reading replies
  * TODO: Migrate JavaMailNotificationStrategy to new JavaMail Configuration
  * TODO: Migrate Availability Reports send via JavaMail to new JavaMail Configuration
  * TODO: Move reading email messages from MTM and this class to JavaMailer class
@@ -97,47 +104,57 @@ public class JavaMailAckReaderImpl implements AckReader {
     
     private Timer m_timer;
     
+    //I think this is a object reference leak... need a factory or something
     private AckService m_ackService;
-    
-    private AckdConfiguration m_config;
 
-    
-    private void findAndProcessAcks() {
+    //Should look at using autowired annotation
+    private AckdConfigurationDao m_daemonConfigDao;
+    private JavaMailConfigurationDao m_jmConfigDao;
+
+    protected void findAndProcessAcks() {
         
-        Collection<Acknowledgment> acks;
+        Collection<OnmsAcknowledgment> acks;
 
         try {
-            List<Message> msgs = readMessages();
+            List<Message> msgs = readMessages();  //TODO: need a read *new* messages feature
             acks = detectAcks(msgs);
             m_ackService.processAcks(acks);
         } catch (JavaMailerException e) {
             // TODO Auto-generated catch block
             e.printStackTrace();
         }
-        
     }
     
-    private Collection<Acknowledgment> detectAcks(List<Message> msgs) {
-        Collection<Acknowledgment> acks = null;
+    protected Collection<OnmsAcknowledgment> detectAcks(List<Message> msgs) {
+        Collection<OnmsAcknowledgment> acks = null;
         
         if (msgs != null) {
-            acks = new ArrayList<Acknowledgment>();
+            acks = new ArrayList<OnmsAcknowledgment>();
             for (Message msg : msgs) {
                 try {
-                    Integer notifyId = detectId(msg.getSubject(), m_config.getNotifyidMatchExpression());
+                    Integer id = detectId(msg.getSubject(), m_daemonConfigDao.getConfig().getNotifyidMatchExpression());
                     
-                    if (notifyId.intValue() > 0) {
-                        acks.add(createAcknowledgment(msg));
+                    if (id.intValue() > 0) {
+                        final OnmsAcknowledgment ack = createAcknowledgment(msg, id);
+                        ack.setAckType(AckType.NOTIFICATION);
+                        acks.add(ack);
+                        continue;
                     }
                     
-                    Integer alarmId = detectId(msg.getSubject(), m_config.getAlarmidMatchExpression());
+                    id = detectId(msg.getSubject(), m_daemonConfigDao.getConfig().getAlarmidMatchExpression());
                     
-                    if (alarmId.intValue() > 0) {
-                        acks.add(createAcknowledgment(msg));
+                    if (id.intValue() > 0) {
+                        final OnmsAcknowledgment ack = createAcknowledgment(msg, id);
+                        ack.setAckType(AckType.ALARM);
+                        acks.add(ack);
+                        continue;
                     }
                     
                 } catch (MessagingException e) {
                     //FIXME: do something audit like here
+                    continue;
+                } catch (IOException e) {
+                    // FIXME: ditto
                     continue;
                 }
             }
@@ -146,10 +163,12 @@ public class JavaMailAckReaderImpl implements AckReader {
     }
 
 
-    private Integer detectId(String subject, String expression) {
-        Integer id = new Integer(0);
-        if (m_config.getAckExpression().startsWith("~")) {
-            String ackExpression = m_config.getAckExpression().substring(1);
+    protected Integer detectId(final String subject, final String expression) {
+        Integer id = Integer.valueOf(0);
+        
+        //TODO: force opennms config '~' style regex attribute identity because this is the only way for this to work
+        if (expression.startsWith("~")) {
+            String ackExpression = expression.substring(1);
             Pattern pattern = Pattern.compile(ackExpression);
             Matcher matcher = pattern.matcher(subject);
             
@@ -161,28 +180,44 @@ public class JavaMailAckReaderImpl implements AckReader {
         return id;
     }
 
-    private Acknowledgment createAcknowledgment(Message msg) throws MessagingException {
+    protected OnmsAcknowledgment createAcknowledgment(Message msg, Integer refId) throws MessagingException, IOException {
         String ackUser = ((InternetAddress)msg.getFrom()[0]).getAddress();
         Date ackTime = msg.getReceivedDate();
-        Acknowledgment ack = new Acknowledgment(ackTime, ackUser);
+        OnmsAcknowledgment ack = new OnmsAcknowledgment(ackTime, ackUser);
+        ack.setAckType(AckType.NOTIFICATION);
+        ack.setAckAction(determineAckAction(msg));
+        ack.setRefId(refId);
         return ack;
+    }
+
+    protected AckAction determineAckAction(Message msg) throws IOException, MessagingException {
+        if (msg.getContent().toString().matches(m_daemonConfigDao.getConfig().getAckExpression())) {
+            return AckAction.ACKNOWLEDGE;
+        } else if (msg.getContent().toString().matches(m_daemonConfigDao.getConfig().getClearExpression())) {
+            return AckAction.CLEAR;
+        } else if (msg.getContent().toString().matches(m_daemonConfigDao.getConfig().getEscalateExpression())) {
+            return AckAction.ESCALATE;
+        } else if (msg.getContent().toString().matches(m_daemonConfigDao.getConfig().getUnackExpression())) {
+            return AckAction.UNACKNOWLEDGE;
+        } else {
+            return AckAction.UNSPECIFIED;
+        }
     }
 
     private List<Message> readMessages() throws JavaMailerException {
         List<Message> messages = null;
         
-        ReadmailConfig m_config = new ReadmailConfig();
-        
-        String protocol = m_config.getReadmailHost().getReadmailProtocol().getTransport();
-        Properties jmProps = createProperties(m_config.getJavamailPropertyCollection());
-        jmProps.put("mail." + protocol + ".host", m_config.getReadmailHost().getHost());
-        jmProps.put("mail." + protocol + ".user", m_config.getUserAuth().getUserName());
-        jmProps.put("mail." + protocol + ".port", m_config.getReadmailHost().getPort());
-        jmProps.put("mail." + protocol + ".starttls.enable", m_config.getReadmailHost().getReadmailProtocol().isStartTls());
+        ReadmailConfig config = m_jmConfigDao.getReadMailConfig(m_daemonConfigDao.getConfig().getReadmailConfig());
+        String protocol = config.getReadmailHost().getReadmailProtocol().getTransport();
+        Properties jmProps = createProperties(config.getJavamailPropertyCollection());
+        jmProps.put("mail." + protocol + ".host", config.getReadmailHost().getHost());
+        jmProps.put("mail." + protocol + ".user", config.getUserAuth().getUserName());
+        jmProps.put("mail." + protocol + ".port", config.getReadmailHost().getPort());
+        jmProps.put("mail." + protocol + ".starttls.enable", config.getReadmailHost().getReadmailProtocol().isStartTls());
         jmProps.put("mail.smtp.auth", "true");
 
-        if (m_config.getReadmailHost().getReadmailProtocol().isSslEnable()) {
-            jmProps.put("mail." + protocol + ".socketFactory.port", m_config.getReadmailHost().getPort());
+        if (config.getReadmailHost().getReadmailProtocol().isSslEnable()) {
+            jmProps.put("mail." + protocol + ".socketFactory.port", config.getReadmailHost().getPort());
             jmProps.put("mail." + protocol + ".socketFactory.class", "javax.net.ssl.SSLSocketFactory");
             jmProps.put("mail." + protocol + ".socketFactory.fallback", "false");
         }
@@ -206,7 +241,7 @@ public class JavaMailAckReaderImpl implements AckReader {
                 
                 try {
                     mailStore = readMailer.getSession().getStore();
-                    mailFolder = retrieveMailFolder(m_config, mailStore);
+                    mailFolder = retrieveMailFolder(config, mailStore);
                     mailFolder.open(Folder.READ_WRITE);  //TODO: Make sure configuration supports flag for deleting acknowledgments
                     
                     if (mailFolder.isOpen()) {
@@ -227,10 +262,6 @@ public class JavaMailAckReaderImpl implements AckReader {
         return messages;
     }
 
-    
-    private Boolean searchForReplies(List<Message> messages, ReadmailConfig config) {
-        return null;
-    }
 
     /**
      * Establish connection with mail store and return the configured mail folder.
@@ -280,8 +311,8 @@ public class JavaMailAckReaderImpl implements AckReader {
         return props;
     }
 
-    public void start(final AckdConfiguration config) {
-        m_config = config;
+    public void start(final AckdConfigurationDao config) {
+        m_daemonConfigDao = config;
         scheduleReads();
     }
     
@@ -332,8 +363,16 @@ public class JavaMailAckReaderImpl implements AckReader {
         return m_ackService;
     }
 
-    public void setAckdConfig(AckdConfiguration config) {
-        m_config = config;
+    public void setAckdConfig(AckdConfigurationDao configDao) {
+        m_daemonConfigDao = configDao;
+    }
+
+    public void setJmConfigDao(JavaMailConfigurationDao jmConfigDao) {
+        m_jmConfigDao = jmConfigDao;
+    }
+
+    public JavaMailConfigurationDao getJmConfigDao() {
+        return m_jmConfigDao;
     }
 
 }
